--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,6 +11,13 @@ img{
 html{
 	scroll-behavior:smooth;
 }
+/*body{
+	background-image: url("../imgs/bc_tile.png");
+  background-repeat: repeat-y;
+}*/
+.main_container{
+
+}
 .action_bar,.action_bar_fixed{
 	min-height:50px;
 	height:50px;
@@ -117,14 +124,17 @@ html{
 	box-shadow:0 0 1px 1px #0002;
 }
 section{
-	min-height:100px;
+	/*min-height:100px;*/
 	z-index:1;
 	position:relative;
+	background-image: url("../imgs/bc_tile.png");
+	background-repeat: repeat;
 }
 .intro{
 	min-height:300px;
 	background:#f5f5f5;
 	padding:20px;
+	margin: auto;
 }
 .intro_profile_pic{
 	display:inline-block;
@@ -193,6 +203,11 @@ section{
 .social_links_img:hover{
 	transform:scaleX(1.2) scaleY(1.2);
 }
+
+section.portfolio{
+  	background: #FFFAF0;
+}
+
 table.interests_row{
 	text-align:center;
 	width:100%;
@@ -242,7 +257,12 @@ hr{
 	float:right;
 	line-height:75px;
 }
-
+.intrest_img{
+    height: auto; 
+    width: auto; 
+    max-width: 100px; 
+    max-height: 100px;	
+}
 @media only screen and (max-width:1000px){
 .menu_item{
 	cursor:pointer;
